BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_ChronicRules__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Action__c</fullName>
        <description>This field reflects the values of the Action field of the Case Field</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_ActualIssue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Explanation</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Credit/Adjustment</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Decided to Keep</fullName>
                </value>
                <value>
                    <fullName>Added Promo</fullName>
                </value>
                <value>
                    <fullName>Processed Rebate</fullName>
                </value>
                <value>
                    <fullName>Remove Free-To-Pay Service</fullName>
                </value>
                <value>
                    <fullName>Addressed T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Addressed ETF</fullName>
                </value>
                <value>
                    <fullName>Addressed UEF</fullName>
                </value>
                <value>
                    <fullName>Addressed Token</fullName>
                </value>
                <value>
                    <fullName>Processed Payment</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Addressed</fullName>
                </value>
                <value>
                    <fullName>Account Cancelled</fullName>
                </value>
                <value>
                    <fullName>Account Saved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ActualIssue__c</fullName>
        <description>This field reflects the values of Actual issues from Case Field</description>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None - General Info</fullName>
                </value>
                <value>
                    <fullName>No Issue</fullName>
                </value>
                <value>
                    <fullName>Double Bill</fullName>
                </value>
                <value>
                    <fullName>Incorrect Plan/Service</fullName>
                </value>
                <value>
                    <fullName>Promo Issue</fullName>
                </value>
                <value>
                    <fullName>T&amp;M Issue</fullName>
                </value>
                <value>
                    <fullName>ETF Issue</fullName>
                </value>
                <value>
                    <fullName>UEF Issue</fullName>
                </value>
                <value>
                    <fullName>Token Issue</fullName>
                </value>
                <value>
                    <fullName>None - Payment Due</fullName>
                </value>
                <value>
                    <fullName>Unable to Process Via Self Service</fullName>
                </value>
                <value>
                    <fullName>Previous MOP Failed</fullName>
                </value>
                <value>
                    <fullName>Chargeback</fullName>
                </value>
                <value>
                    <fullName>None - Payment Applied</fullName>
                </value>
                <value>
                    <fullName>Misapplied Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Failed</fullName>
                </value>
                <value>
                    <fullName>Never Received/Cashed</fullName>
                </value>
                <value>
                    <fullName>Not Yet Processed</fullName>
                </value>
                <value>
                    <fullName>Unable to Downgrade Online</fullName>
                </value>
                <value>
                    <fullName>Unable to Downgrade</fullName>
                </value>
                <value>
                    <fullName>Promotion Info Request</fullName>
                </value>
                <value>
                    <fullName>Apply Promotion</fullName>
                </value>
                <value>
                    <fullName>Cancel Due to Alt Service</fullName>
                </value>
                <value>
                    <fullName>Cancel Due to Poor Service</fullName>
                </value>
                <value>
                    <fullName>Reactivation</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Wrong Plan</fullName>
                </value>
                <value>
                    <fullName>New Plan</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Account Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ApplyRuleToChildrenAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply rule to Children Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Assets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseRecordType__c</fullName>
        <description>This field reflects values from the Case Status Field.</description>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CaseDetail</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseStatus__c</fullName>
        <description>This field reflects values from the Case Status Field.</description>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open Unassigned</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Awaiting SPR Code Release</fullName>
                </value>
                <value>
                    <fullName>Build Out Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled or Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete—Impact</fullName>
                </value>
                <value>
                    <fullName>Complete—No issues</fullName>
                </value>
                <value>
                    <fullName>Complete—Pending Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Director Approved</fullName>
                </value>
                <value>
                    <fullName>Director Approved and Scheduled</fullName>
                </value>
                <value>
                    <fullName>EMRB Approved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Failed QA</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Hardware</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Phase</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Investigation Closed</fullName>
                </value>
                <value>
                    <fullName>Investigation Open</fullName>
                </value>
                <value>
                    <fullName>MRB Approved</fullName>
                </value>
                <value>
                    <fullName>No Problem Found</fullName>
                </value>
                <value>
                    <fullName>Open Escalated</fullName>
                </value>
                <value>
                    <fullName>Open Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Acceptance</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Technical support assistance (Including Email, Service Issues, Speed, Browsing Issues)</fullName>
                </value>
                <value>
                    <fullName>Billing support assistance- includes billing adjustments, suspension &amp; post-installation cancel requests</fullName>
                </value>
                <value>
                    <fullName>Repair truckroll assistance</fullName>
                </value>
                <value>
                    <fullName>Return equipment for credit assistance</fullName>
                </value>
                <value>
                    <fullName>Service plan upgrade or downgrade assistance</fullName>
                </value>
                <value>
                    <fullName>Store credit inquiry</fullName>
                </value>
                <value>
                    <fullName>Log-in issue</fullName>
                </value>
                <value>
                    <fullName>Order placement issue or problem</fullName>
                </value>
                <value>
                    <fullName>General inquiry</fullName>
                </value>
                <value>
                    <fullName>Install Portal assistance</fullName>
                </value>
                <value>
                    <fullName>Onsite assistance for HughesNet certified installers</fullName>
                </value>
                <value>
                    <fullName>Partner Portal log-in issue</fullName>
                </value>
                <value>
                    <fullName>HughesNet store log-in issue</fullName>
                </value>
                <value>
                    <fullName>Install Portal log-in issue</fullName>
                </value>
                <value>
                    <fullName>Approval of ads, Websites, or marketing materials</fullName>
                </value>
                <value>
                    <fullName>Assistance with selling and marketing strategies</fullName>
                </value>
                <value>
                    <fullName>Information on approvals for the marketing coop program</fullName>
                </value>
                <value>
                    <fullName>API Interface issue or question</fullName>
                </value>
                <value>
                    <fullName>Unable to resolve order placement issue through Retail Support</fullName>
                </value>
                <value>
                    <fullName>Partner Order Website (POW) questions</fullName>
                </value>
                <value>
                    <fullName>Create, modify, fix, view or cancel assistance</fullName>
                </value>
                <value>
                    <fullName>Retailer obtaining order status (Number not for customers)</fullName>
                </value>
                <value>
                    <fullName>Equipment upgrade assistance</fullName>
                </value>
                <value>
                    <fullName>Updat Retailer contact Information</fullName>
                </value>
                <value>
                    <fullName>Retailer Setup</fullName>
                </value>
                <value>
                    <fullName>Installer Return Material Authorizations (RMAs) for defective equipment</fullName>
                </value>
                <value>
                    <fullName>General questions not addressed by your distributor or the Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Help with locating marketing, training or policy related information on the Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Login and Password resets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active HughesNet account</fullName>
                </value>
                <value>
                    <fullName>HughesNet Store</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Log-in</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Order Placement</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retailer Payment Questions</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Non Technical</fullName>
                </value>
                <value>
                    <fullName>Work Order Repair</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Vendor Meet</fullName>
                </value>
                <value>
                    <fullName>Guest Wifi</fullName>
                </value>
                <value>
                    <fullName>Key Fob</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ChronicCasesforthatLocationAccount__c</fullName>
        <label>Chronic Cases for that Location Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_CurePeriod__c</fullName>
        <description>This field will hold the number of days for which Case Status has to be changes to &lt;&gt; . If it is not in that status within cure period then the template is checked , if the exclude asset is checked then assets are excluded from future chronic calculation.</description>
        <label>Cure Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_NoofChronicCases__c</fullName>
        <label>Number of Chronic Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_NumberOfDaysUnflagAcc__c</fullName>
        <description>No of Days for Unflaging Chronic Account</description>
        <inlineHelpText>This field displays the count in number of days for  Unflaging Chronic Account</inlineHelpText>
        <label>No of Days for Unflaging Chronic Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_NumberofCasesAssets__c</fullName>
        <description>This field holds data of number of cases that has to be created</description>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_QuickCaseCreateTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides lookup to Quick Case Create Templates. Chronic Case is auto-created based on this Quick Case Create Template that user references in this field</description>
        <label>Quick Case Create Template</label>
        <referenceTo>HSvc_CaseTemplate__c</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Scope__c</fullName>
        <formula>IF(ISBLANK(Account__c),IF(AND(ISBLANK(HSvc_Assets__c),ISBLANK(Hsvc_HNSProduct__c),ISBLANK(Hsvc_ProductGrouping__c)),&apos;Global&apos;,&apos;Asset&apos;),IF(( Account__r.RecordType.Name==&apos;Location&apos;),&apos;Location&apos;,&apos;Company&apos;))</formula>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalAccount__c</fullName>
        <label>Time Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalAsset__c</fullName>
        <label>Time Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalAutoClosingCase__c</fullName>
        <label>Time Interval(Min) for Auto Closing Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalMinAccount__c</fullName>
        <label>Time Interval(Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalMinAsset__c</fullName>
        <label>Time Interval(Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_TimeIntervalUnflagingAccount__c</fullName>
        <label>Time Interval(Min) for Unflaging Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_CaseStatusAutoClosingCase__c</fullName>
        <label>Case Status for Auto-Closing Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Awaiting SPR Code Release</fullName>
                </value>
                <value>
                    <fullName>Build Out Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled or Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete—Impact</fullName>
                </value>
                <value>
                    <fullName>Complete—No issues</fullName>
                </value>
                <value>
                    <fullName>Complete—Pending Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Director Approved</fullName>
                </value>
                <value>
                    <fullName>Director Approved and Scheduled</fullName>
                </value>
                <value>
                    <fullName>EMRB Approved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Failed QA</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Hardware</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Phase</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Investigation Closed</fullName>
                </value>
                <value>
                    <fullName>Investigation Open</fullName>
                </value>
                <value>
                    <fullName>MRB Approved</fullName>
                </value>
                <value>
                    <fullName>No Problem Found</fullName>
                </value>
                <value>
                    <fullName>Open Escalated</fullName>
                </value>
                <value>
                    <fullName>Open Unassigned</fullName>
                </value>
                <value>
                    <fullName>Open Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Acceptance</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_DaysAutoClosingCase__c</fullName>
        <inlineHelpText>This field displays the count in number of days for auto-closing a chronic case</inlineHelpText>
        <label>No of Days for Auto-Closing Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_ProductGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Grouping</label>
        <referenceTo>Product_Grouping__c</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Chronic Rules</label>
    <listViews>
        <fullName>Account_Unflag</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>HSvc_NoofChronicCases__c</columns>
        <columns>HSvc_NumberOfDaysUnflagAcc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRules__c.Rule_For_Un_checking_a_Chronic_Account</value>
        </filters>
        <label>Account Unflag</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>HSvc_Assets__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>HSvc_Scope__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Auto_Close_Case</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>HSvc_Assets__c</columns>
        <columns>Hsvc_CaseStatusAutoClosingCase__c</columns>
        <columns>Hsvc_DaysAutoClosingCase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRules__c.Hsvc_RuleForAutoClosingCase</value>
        </filters>
        <label>Auto Close Case</label>
    </listViews>
    <listViews>
        <fullName>Global_Rules</fullName>
        <columns>NAME</columns>
        <columns>HSvc_ChronicCasesforthatLocationAccount__c</columns>
        <columns>HSvc_NumberOfDaysUnflagAcc__c</columns>
        <columns>Hsvc_DaysAutoClosingCase__c</columns>
        <columns>Hsvc_CaseStatusAutoClosingCase__c</columns>
        <columns>HSvc_CurePeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRules__c.Global_Rule</value>
        </filters>
        <label>Global Rules</label>
    </listViews>
    <listViews>
        <fullName>Rules_For_Flagging_Asset_as_Chronic</fullName>
        <columns>NAME</columns>
        <columns>HSvc_QuickCaseCreateTemplate__c</columns>
        <columns>HSvc_NumberofCasesAssets__c</columns>
        <columns>HSvc_TimeIntervalAsset__c</columns>
        <columns>HSvc_TimeIntervalAccount__c</columns>
        <columns>HSvc_CurePeriod__c</columns>
        <columns>HSvc_Assets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRules__c.Rule_For_Marking_Asset_Chronic</value>
        </filters>
        <label>Rules For Flagging Asset as Chronic</label>
    </listViews>
    <listViews>
        <fullName>Rules_for_flagging_Account_Chronic</fullName>
        <columns>NAME</columns>
        <columns>HSvc_ChronicCasesforthatLocationAccount__c</columns>
        <columns>HSvc_Scope__c</columns>
        <columns>Account__c</columns>
        <columns>HSvc_ApplyRuleToChildrenAccounts__c</columns>
        <columns>HSvc_TimeIntervalAsset__c</columns>
        <columns>HSvc_TimeIntervalAccount__c</columns>
        <columns>HSvc_NoofChronicCases__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRules__c.Rule_For_Marking_Account_Chronic</value>
        </filters>
        <label>Rules for flagging Account Chronic</label>
    </listViews>
    <nameField>
        <label>Chronic Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chronic Rules</pluralLabel>
    <recordTypes>
        <fullName>Global_Rule</fullName>
        <active>true</active>
        <description>Record Type to create a global rule if Asset, Account id not known</description>
        <label>Global Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hsvc_RuleForAutoClosingCase</fullName>
        <active>true</active>
        <description>Choose this record type if you want to create a new rule for an unflagging a chronic asset.</description>
        <label>Rule For Auto-Closing Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rule_For_Marking_Account_Chronic</fullName>
        <active>true</active>
        <description>Choose this record type if you want to create a new chronic rule for an account/location.</description>
        <label>Rule For Marking Account Chronic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rule_For_Marking_Asset_Chronic</fullName>
        <active>true</active>
        <description>Choose this record type if you want to create a new chronic rule for an asset.</description>
        <label>Rule For Marking Asset Chronic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rule_For_Un_checking_a_Chronic_Account</fullName>
        <active>true</active>
        <description>Choose this record type if you want to create a new rule for an unflagging a chronic account/location.</description>
        <label>Rule For Un-checking a Chronic Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>HSvc_CaseTemplateMandatoryOnGlobalRule</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL(HSvc_TimeIntervalAsset__c)),NOT(ISNULL(HSvc_NumberofCasesAssets__c)),NOT(ISNULL(HSvc_QuickCaseCreateTemplate__c)))</errorConditionFormula>
        <errorDisplayField>HSvc_QuickCaseCreateTemplate__c</errorDisplayField>
        <errorMessage>Please associate a Case Template for the creation of Chronic Case</errorMessage>
    </validationRules>
</CustomObject>